# hashi

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  hashi.md  lossless-watcher-plan.md  onchain-redesign-plan.md
.config/: nextest.toml
.github/scripts/: install-sui.sh
.github/workflows/: ci.yml  deterministic-build.yml  frontend.yml  gh-pages.yml  guardian-enclave.yml  move.yml  pages-preview.yaml  refresh-sdk-docs.yml  rustdoc.yml  testnet-release.yml
crates/e2e-tests/: Cargo.toml
crates/hashi/: Cargo.toml  buf.yaml
crates/hashi-btc/: Cargo.toml  README.md
crates/hashi-cli/: Cargo.toml
crates/hashi-guardian/: .gitignore  Cargo.toml  Containerfile  Makefile  README.md
crates/hashi-guardian-bootstrap/: Cargo.toml
crates/hashi-guardian-bootstrap/src/: main.rs
crates/hashi-guardian-client/: Cargo.toml  README.md
crates/hashi-guardian-client/src/: main.rs
crates/hashi-guardian-enclave/: Cargo.toml  Containerfile  Makefile  README.md
crates/hashi-guardian-init/: Cargo.toml  README.md  ceremony-run.sample.yaml  ceremony-verify.sample.yaml  guardian-init.sample.yaml  key-provisioner-ceremony.sample.yaml  key-provisioner-provision.sample.yaml  operator-ceremony.sample.yaml  operator-provision.sample.yaml  provision.sample.yaml  provisioner-init.sample.yaml
crates/hashi-guardian-init/src/: ceremony.rs  config.rs  dev_bootstrap.rs  dev_recover.rs  fetch_info.rs  generate_master_key.rs  guardian_info.rs  hashi_onchain.rs  heartbeat_checks.rs  kp_ceremony.rs  kp_provision.rs  kp_roster.rs  kp_rotate_cert.rs  lib.rs  limiter_recovery.rs  main.rs  operator_activate.rs  operator_ceremony.rs  operator_provision.rs  provision.rs  provisioner.rs
crates/hashi-guardian-init/src/provisioner_init/: mod.rs
crates/hashi-guardian-proxy/: Cargo.toml
crates/hashi-guardian-proxy/src/: cache.rs  config.rs  forward.rs  info.rs  lib.rs  main.rs  metrics.rs  relay.rs  roster.rs  widlog.rs
crates/hashi-guardian-proxy/tests/: single_port.rs
crates/hashi-guardian-server/: Cargo.toml
crates/hashi-guardian-server/src/: attestation.rs  getters.rs  health_check.rs  init.rs  main.rs  s3_logger.rs  setup.rs  withdraw.rs
crates/hashi-guardian-shared/: Cargo.toml
crates/hashi-guardian-shared/src/: bitcoin_utils.rs  crypto.rs  enclave_state.rs  epoch_store.rs  errors.rs  lib.rs  proto_conversions.rs  s3_logger.rs  test_utils.rs
crates/hashi-guardian/enclave/: Cargo.toml
crates/hashi-guardian/enclave/scripts/: README.md  configure_enclave.sh  prepare-build.sh
crates/hashi-guardian/examples/: bootstrap_guardian_init.rs  bootstrap_operator_init.rs
crates/hashi-guardian/scripts/: expose_enclave.sh  user-data.sh
crates/hashi-guardian/src/: attestation.rs  cache.rs  committee_update.rs  dev_bootstrap.rs  enclave.rs  eph_keys.rs  getters.rs  info.rs  init.rs  lib.rs  main.rs  operator_activate.rs  operator_init.rs  rotate.rs  rpc.rs  s3_client.rs  s3_logger.rs  s3_reader.rs  setup.rs  task_spawner.rs  test_utils.rs  withdraw.rs
crates/hashi-guardian/src/ceremony_mode/: mod.rs  rotate.rs  setup.rs
crates/hashi-guardian/src/client/: Cargo.toml
crates/hashi-guardian/src/client/src/: main.rs
crates/hashi-guardian/src/s3_reader/: heartbeat_checks.rs  limiter_recovery.rs
crates/hashi-guardian/src/server/: Cargo.toml
crates/hashi-guardian/src/server/src/: main.rs  s3_logger.rs
crates/hashi-guardian/src/shared/src/: lib.rs
crates/hashi-guardian/src/withdraw_mode/: committee_update.rs  genesis.rs  heartbeat.rs  mod.rs  operator_activate.rs  provisioner_init.rs  provisioner_rotate_cert.rs  standard.rs  standard_withdrawal.rs
crates/hashi-monitor/: Cargo.toml  README.md  audit.sample.yaml  config.sample.yaml  provisioner-init.sample.yaml
crates/hashi-screener/: Cargo.toml
crates/hashi-telemetry/: Cargo.toml
crates/hashi-types/: Cargo.toml
crates/internal-tools/: Cargo.toml
crates/loadtest/: Cargo.toml  README.md
crates/loadtest/src/: bridge.rs  btc.rs  config.rs  main.rs  run.rs  ui.rs
crates/mpc/: Cargo.toml
crates/mpc/src/: committee_view.rs  constants.rs  lib.rs  metrics.rs  mpc_except_signing.rs  mpc_except_signing_tests.rs  service_state.rs  signing.rs  test_committee_set.rs
crates/mpc/src/communication/: interfaces.rs  mod.rs
crates/mpc/src/rpc/: mod.rs  proto_conversions.rs  service.rs
crates/mpc/src/storage/: interfaces.rs  mod.rs
crates/proto-build/: Cargo.toml
crates/sui-ecs/: Cargo.toml
crates/sui-ecs/src/: component.rs  index.rs  ingest.rs  lib.rs  move_bound.rs  scheduler.rs  world.rs
crates/sui-ecs/src/base/: mod.rs  nesting.rs  object.rs  ownership.rs  traversal.rs  typed.rs
crates/test-networks/: Cargo.toml
crates/test-networks/src/: bitcoin_network.rs  bitcoin_node.rs  deposit_flow.rs  hashi_network.rs  lib.rs  sui_network.rs
design/: .gitignore  404.html  address-scheme.html  book.toml  committee.html  config.html  config.md  deposit.html  docusaurus.config.js  fees.html  governance-actions.html  guardian.html  index.html  limiter.html  llms-full.txt  llms.txt  middleware.js  mpc-protocol.html  node-backup.md  node-operator-runbook.md  package-lock.json  package.json  print.html  reconfiguration.html  reconfiguration.md  sanctions.html  searcher-c2a407aa.js  searchindex-138da01f.js  service.html  sidebars.js  sitemap.xml  tailwind.config.js  ts-sdk.md  user-flows.html  user-flows.md  withdraw.html
design/address-scheme/: index.html
design/committee/: index.html
design/config/: index.html
design/deposit/: index.html
design/docs/: README.md  README.mdx  address-scheme.mdx  committee.mdx  config.mdx  deposit.md  deposit.mdx  fees.md  fees.mdx  governance-actions.mdx  guardian.mdx  limiter.mdx  move-model-lifecycle.md  move-model-lifecycle.mdx  mpc-protocol.mdx  node-backup.mdx  node-operator-runbook.mdx  reconfiguration.md  reconfiguration.mdx  sanctions.mdx  service.md  service.mdx  ts-sdk.mdx  (+6 more)
doc/: hashi.md
docker/: Containerfile
frontend/: .gitignore  package.json  pnpm-lock.yaml  sui-codegen.config.ts
key-provisioner/: flake.nix
rustdoc/: crates.js  help.html  settings.html  src-files.js
(+5938 files in other folders)
