[package]
name = "hashi-guardian-init"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
clap.workspace = true
hashi-types = { path = "../hashi-types" }
hashi-guardian = { path = "../hashi-guardian" }
hex.workspace = true
hpke.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
bitcoin.workspace = true
hashi-guardian = { path = "../hashi-guardian", features = ["test-utils"] }
