[package]
name = "hashi-guardian-init"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
bitcoin.workspace = true
clap.workspace = true
hashi = { path = "../hashi" }
hashi-types = { path = "../hashi-types" }
hashi-guardian = { path = "../hashi-guardian" }
hex.workspace = true
hpke.workspace = true
k256.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
zeroize.workspace = true

[features]
# Verify against a non-enclave-dev guardian (mock NSM attestation) — used by the
# local replica + dev deploys. Propagates the feature to hashi-types (where the
# attestation verify is a no-op under it) and hashi-guardian (its S3 reader).
non-enclave-dev = ["hashi-types/non-enclave-dev", "hashi-guardian/non-enclave-dev"]

[dev-dependencies]
hashi-guardian = { path = "../hashi-guardian", features = ["test-utils"] }
