[package]
name = "hashi-guardian-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tonic.workspace = true
tonic-health.workspace = true
lru.workspace = true
hashi-types = { path = "../hashi-types" }
aws-config.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
bitcoin.workspace = true
prometheus.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio-stream.workspace = true
