[package]
name = "guardian-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.7" }
anyhow = "1.0"
hashi-guardian-shared = { path = "../hashi-guardian-shared" }

# Logging dependencies
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# AWS dependencies
aws-config = "1.1.7"
aws-sdk-s3 = "1.12.0"

# Crypto dependencies
hpke = "0.13.0"
rand = "0.9.2"
bitcoin = "0.32.7"
vsss-rs = { git = "https://github.com/mikelodder7/vsss-rs", rev = "cb7425a4c634376b2f5fcc7691b4f6e8e0753b13" }
p256 = "0.13"
rand_core = "0.6"
