[package]
name = "guardian-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.7" }
anyhow = "1.0"
hashi-guardian-shared = { path = "../hashi-guardian-shared" }
serde_bytes = "0.11.17"

# Logging dependencies
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# AWS dependencies
aws-config = "1.1.7"
aws-sdk-s3 = "1.12.0"

# Crypto dependencies
hpke = "0.12.0"# Not using hpke 0.13.0 because it uses rand 0.9 which breaks fastcrypto
rand = "0.8.5"
bitcoin = "0.32.7"
vsss-rs = { git = "https://github.com/mikelodder7/vsss-rs", rev = "cb7425a4c634376b2f5fcc7691b4f6e8e0753b13" }
p256 = "0.13"
rand_core = "0.6"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "e4127630173582f164c1eb704a5bc3d6eacb0d27", features = ["aes"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
log = "0.4.28"
