[package]
name = "guardian-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.7" }
anyhow = "1.0"
hashi-guardian-shared = { path = "../hashi-guardian-shared" }
serde_bytes = "0.11.17"

# Logging dependencies
tracing = "0.1.41"

# AWS dependencies
aws-config = "1.1.7"
aws-sdk-s3 = "1.12.0"

# Crypto dependencies
hpke = "0.12.0"
rand = "0.8.5"
bitcoin = "0.32.7"
k256 = "0.13"
blake2 = "0.10"
hex = "0.4"
ed25519-consensus = "2.1"
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api", optional = false }
governor = "0.10.2"
nonzero_ext = "0.3.0"
