[package]
name = "hashi-guardian-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
axum = { version = "0.7" }
tracing = "0.1.41"
serde_json = "1.0.143"

# Crypto dependencies
hpke = "0.12.0"# Not using hpke 0.13.0 because it uses rand 0.9 which breaks vsss-rs
rand = "0.8.5"
vsss-rs = { git = "https://github.com/mikelodder7/vsss-rs", rev = "cb7425a4c634376b2f5fcc7691b4f6e8e0753b13" }
k256 = "0.13"
blake2 = "0.10"
bitcoin = { version =  "0.32.7", features = ["serde"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rand_core = "0.6"
