[package]
name = "hashi-guardian-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
axum = "0.7"
tracing = "0.1.41"
serde_json = "1.0.143"

# Crypto dependencies
hpke = "0.12.0"# Not using hpke 0.13.0 because it uses rand 0.9 which breaks vsss-rs
rand = "0.8.5"
rand_core = "0.6.4"
k256 = "0.13"
bitcoin = { version =  "0.32.7", features = ["serde", "rand-std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rand_core = "0.6"
