[package]
name = "loadtest"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "loadtest"
path = "src/main.rs"

[dependencies]
hashi = { path = "../hashi" }
hashi-types = { path = "../hashi-types" }

sui-sdk-types.workspace = true
sui-rpc.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
clap.workspace = true
corepc-client.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
