[package]
name = "sui-ecs"
version = "0.0.0"
edition = "2024"

[dependencies]
sui-sdk-types.workspace = true
sui-rpc.workspace = true
tonic.workspace = true
futures.workspace = true
thiserror.workspace = true

[dev-dependencies]
bcs.workspace = true
serde.workspace = true
serde_derive.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
