[package]
name = "test-networks"
version = "0.0.0"
edition = "2024"

[dependencies]
test-cluster = { git = "https://github.com/MystenLabs/sui.git"}
hashi = { path = "../hashi", features = ["test-metrics"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
ed25519-dalek = { version = "2.0", features = ["pkcs8", "pem"] }
rand = "0.8"
