[package]
name = "guardian-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.7" }
anyhow = "1.0"
shared = { path = "../shared" }

# Logging dependencies
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# AWS dependencies
aws-config = "1.1.7"
aws-sdk-s3 = "1.12.0"
